sandbox_fixtures/home_loan/force-app/main/default/objects/Opportunity/fields/KYC_Complete__c.field-meta.xml
<CustomField>
    <fullName>KYC_Complete__c</fullName>
    <label>KYC Complete</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>