sandbox_fixtures/home_loan/force-app/main/default/objects/Opportunity/fields/Loan_to_Value__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Value__c</fullName>
    <label>Loan-to-Value (%)</label>
    <formula>IF(Property_Value__c &gt; 0, Loan_Amount__c / Property_Value__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>