sandbox_fixtures/home_loan/force-app/main/default/objects/Opportunity/validationRules/Block_Approved_Without_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Approved_Without_Approval</fullName>
    <active>true</active>
    <description>Loans over 50 lakh require Manager Approval before moving to Approved stage.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Approved&quot;),
  Loan_Amount__c &gt; 5000000,
  NOT(ISPICKVAL(Approval_Status__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorMessage>Loans over &#8377;50,00,000 require Manager Approval before moving to Approved.</errorMessage>
</ValidationRule>