sandbox_fixtures/home_loan/force-app/main/default/objects/Opportunity/validationRules/Home_Loan_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Loan_Required_Fields</fullName>
    <active>true</active>
    <description>Home Loan opportunities must have Loan Amount, Property Value, and Annual Income populated.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Loan_Type__c, &quot;Home&quot;),
  OR(
    ISBLANK(Loan_Amount__c),
    ISBLANK(Property_Value__c),
    ISBLANK(Annual_Income__c)
  )
)</errorConditionFormula>
    <errorMessage>Home Loan requires Loan Amount, Property Value, and Annual Income.</errorMessage>
</ValidationRule>