sandbox_fixtures/home_loan/force-app/main/default/objects/Opportunity/validationRules/Loan_Exceeds_Property_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Exceeds_Property_Value</fullName>
    <active>true</active>
    <description>Loan Amount cannot exceed Property Value.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Loan_Amount__c)),
  NOT(ISBLANK(Property_Value__c)),
  Loan_Amount__c &gt; Property_Value__c
)</errorConditionFormula>
    <errorDisplayField>Loan_Amount__c</errorDisplayField>
    <errorMessage>Loan Amount cannot exceed Property Value.</errorMessage>
</ValidationRule>